syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/discentem/cavorite/stores/pluginproto";

package plugin;

message Objects {
  repeated string objects = 1;
}

message Options {
  string backend_address = 1;
  string plugin_address = 2;
  string metadata_file_extension = 3;
  string region = 4;
}

message ObjectMetadata {
  string name = 1;
  string checksum = 2;
  google.protobuf.Timestamp date_modified = 3;
}

message ObjectsAndMetadataMap {
  Objects objects = 1;
  map<string, ObjectMetadata> map = 2;
}

service Plugin {
  rpc Upload(Objects) returns (google.protobuf.Empty) {}
  rpc Retrieve(ObjectsAndMetadataMap) returns (google.protobuf.Empty) {}
  rpc GetOptions(google.protobuf.Empty) returns (Options) {}
}
